# nova-ai-platform

./: .env.example  .gitignore  README.md  audit_log.jsonl  evaluation_report.json  generate_mock_db.py  nova_mock_db.json  nova_traces.json  pyproject.toml  rag_module.py  requirements.txt  task1_prompt_engineering.ipynb  task3_rag_pipeline.ipynb  task4_finetune.ipynb  task5_demo.py  task5_nova_platform.ipynb  task5_nova_platform.py
notebooks/: task1_prompt_engineering.ipynb  task3_rag_pipeline.ipynb  task4_finetune.ipynb
prompts/: escalation_detector_v1.txt  intent_classifier_v1.txt  system_prompt_v1.txt
task2_mcp/: __init__.py  client.py  demo.py  server.py
