[project]
name = "nova-ai-platform"
version = "1.0.0"
description = "NOVA AI Support & Personalization Platform — Assessment"
requires-python = ">=3.10"
dependencies = [
    # ── LLM / Inference ──────────────────────────────────────────────────────
    "openai>=1.51.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "httpx>=0.27.2",

    # ── RAG / Vector Store ────────────────────────────────────────────────────
    "chromadb>=0.5.5,<0.6.0",
    "onnxruntime>=1.17.0,<1.20.0",
    "sentence-transformers>=3.1.1",
    "rank-bm25>=0.2.2",

    # ── Multi-Agent / Orchestration ───────────────────────────────────────────
    "langchain>=0.3.1",
    "langchain-community>=0.3.1",
    "langchain-core>=0.3.6",
    "langchain-openai>=0.2.1",
    "langgraph>=0.2.28",

    # ── MCP / API Server ──────────────────────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn>=0.30.6",

    # ── Data & Utilities ──────────────────────────────────────────────────────
    "faker>=30.3.0",
    "pandas>=2.2.3",
    "numpy>=1.26.4",
    "pydantic>=2.9.2",
    "tqdm>=4.66.5",
    "scikit-learn>=1.5.2",
    "matplotlib>=3.9.2",
]

# Task 4 (fine-tuning) is GPU-only — run on Google Colab, not locally
# Install with: uv pip install -e ".[finetune]"  (on Colab only)
[project.optional-dependencies]
finetune = [
    "transformers>=4.44.2",
    "datasets>=2.21.0",
    "peft>=0.12.0",
    "trl>=0.10.1",
    "bitsandbytes>=0.43.3",
    "accelerate>=0.34.2",
    "wandb>=0.17.9",
    "huggingface-hub>=0.24.7",
    "sentencepiece>=0.2.0",
    "einops>=0.8.0",
    "rouge-score>=0.1.2",
]
eval = [
    "ragas>=0.1.21",
    "datasets>=2.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
