[project]
name = "nova-ai-platform"
version = "1.0.0"
description = "NOVA AI Support & Personalization Platform — Assessment"
requires-python = ">=3.10"
dependencies = [
    # ── LLM / Inference ──────────────────────────────────────────────────────
    "openai>=1.51.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",

    # ── RAG (lightweight — no torch locally) ─────────────────────────────────
    "rank-bm25>=0.2.2",

    # ── Multi-Agent / Orchestration ───────────────────────────────────────────
    "langchain-core>=0.3.6",
    "langchain-openai>=0.2.1",
    "langgraph>=0.2.28",

    # ── MCP / API Server ──────────────────────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn>=0.30.6",

    # ── Data & Utilities ──────────────────────────────────────────────────────
    "faker>=30.3.0",
    "pandas>=2.2.3",
    "pydantic>=2.9.2",
]

# NOTE: Task 4 (fine-tuning) + Task 3 RAG (chromadb, sentence-transformers)
# run on Google Colab only — those notebooks handle their own !pip install cells.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

# Force CPU-only torch so uv doesn't download 3GB of CUDA packages
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
